--- a/FI.WebAtividadeEntrevista/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -18,8 +18,8 @@
     <div class="row">
         <div class="col-md-6">
             <div class="form-group">
-                <label for="cpf">CPF:</label>
-                <input required="required" type="text" class="form-control" id="cpf" name="cpf" placeholder="Ex.: 111.222.333-44" maxlength="14" />
+                <label for="CPF">CPF:</label>
+                <input required="required" type="text" class="form-control" id="CPF" name="CPF" placeholder="Ex.: 111.222.333-44" maxlength="14" />
 
             </div>
         </div>    
@@ -93,3 +93,4 @@
 
 
 </form>
+
